# scrapsrl

./: .lvimrc  Cargo.toml  README.md  clippy.toml  monofur-nf-24-square.xcf
resource/icons/: automata_predator_drone.ron  automata_satellite.ron  boulder.ron  building_factory.ron  building_hospital.ron  building_store.ron  critter_bug.ron  deciduous_tree.ron  device_circuit_board.ron  device_handheld_radio.ron  device_laptop_1.ron  device_laptop_2.ron  device_laptop_3.ron  device_old_computer.ron  device_printer.ron  device_printer_3d.ron  device_projector.ron  device_radio.ron  device_scanner.ron  device_sd_card.ron  device_server_rack.ron  device_sim_card.ron  device_tablet.ron  fauna_cat.ron  fauna_dog.ron  fauna_elephant.ron  fauna_rat.ron  fauna_shockroach.ron  fauna_shockroach_queen.ron  fixture_bed_right.ron  fixture_bookshelf.ron  fixture_cabinet.ron  fixture_cabinet_large.ron  fixture_chair.ron  fixture_counter_cabinet.ron  fixture_dishwasher.ron  fixture_lamp_east.ron  fixture_lamp_west.ron  fixture_pipe_s.ron  fixture_shelf_east.ron  (+74 more)
resource/template/: computer.ron  shockroach.ron
src/: constants.rs  cursor.rs  display.rs  game_state.rs  main.rs  mapgen.rs  resource.rs  tile.rs  tiles.rs  ui.rs  util.rs
src/area_map/: iterators.rs  mod.rs
src/component/: ai_brain.rs  character.rs  color.rs  colors.rs  connected_tile.rs  cursor.rs  description.rs  icon.rs  icon_ref.rs  mod.rs  move_plan.rs  notification.rs  opaque.rs  orientation.rs  player.rs  position.rs  region.rs  solid.rs  tile.rs  user_input.rs
src/display/: mod.rs
src/entity/: character.rs  (+2 more)
(+130 files in other folders)
