[package]
name = "scrapsrl"
version = "0.1.0"
authors = ["Justen Robertson <justen@justen.us>"]
edition = "2018"

[dependencies]
tcod = "0.13"
specs = "0.14.0"
shred = "0.7.1"
specs-derive = "0.4.0"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
wfc = "0.8.0"
rand = "*"
ron = "*"
rand_pcg = "*"
direction = "0.17.7"

[features]
nightly = ["shred/nightly"]
