[package]
name = "scrapsrl"
version = "0.1.0"
authors = ["Justen Robertson <justen@justen.us>"]
edition = "2018"

[dependencies]
tcod = "0.13"
specs = "0.14.0"
shred = "0.7.1"
shred-derive = "0.5.1"
specs-derive = "0.4.0"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
wfc = "0.8.0"
rand = "*"
ron = "*"
rand_pcg = "*"
direction = "0.17.7"
num = "0.2"
rayon = "^1.0"
ndarray = { version = "0.12.1", features = ["serde-1"] }

[features]
nightly = ["shred/nightly"]
